fix text alignment

--- a/styles/UserComponent.module.css
+++ b/styles/UserComponent.module.css
@@ -14,4 +14,5 @@
   width: 100px;
   text-overflow: ellipsis;
   margin-top: 10px;
+  text-align: center;
 }
